--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "aos": "^2.3.4",
     "firebase": "^10.7.1",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
@@ -13,6 +15,10 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.3",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.3.0",
+    "tsparticles-slim": "^2.12.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
