--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
     "firebase": "^10.7.1",
